Add notebook plot option

--- a/S2_ActionPotential/S2_ActionPotential.ipynb
+++ b/S2_ActionPotential/S2_ActionPotential.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "id": "y0Ng1h_actsV",
     "scrolled": true
@@ -177,7 +177,7 @@
     "    plt.xlabel('time (ms)'); plt.ylabel('nA')\n",
     "    plt.show()\n",
     "\n",
-    "def activemodel(tstop,block_na,block_k,clamp,ccl_amp,ccl_dur,ccl_delay,vcl_amp):\n",
+    "def activemodel(tstop,block_na,block_k,clamp,ccl_amp,ccl_dur,ccl_delay,vcl_amp,fig):\n",
     "    if block_na: soma.gnabar_na = 0\n",
     "    else: soma.gnabar_na = gnabar\n",
     "    if block_k: soma.gkbar_k = 0\n",
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -212,12 +212,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ff7ceda126454a31a44189558434ebce",
+       "model_id": "984b43b7f47646ba9e100cf98924e066",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Button(button_style='primary', description='Reset', icon='history', style=ButtonStyle()), Float…"
+       "VBox(children=(HBox(children=(Button(button_style='primary', description='Reset', icon='history', style=Button…"
       ]
      },
      "metadata": {},
@@ -226,7 +226,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "fa571a2e2f6948d1a1acdc64e090fa11",
+       "model_id": "fa9b92b1e9084166b3a0f6462da721f4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -254,6 +254,7 @@
     "\n",
     "wide = Layout(width='30%')\n",
     "w_reset = widgets.Button(description='Reset',icon='history',button_style='primary')\n",
+    "w_fig = widgets.ToggleButton(value=False,description='Interactive plot',icon='window-restore',button_style='success')\n",
     "w_tstop = widgets.FloatSlider(value=tstop,min=10,max=1000, step=10,description='Tstop (ms)')\n",
     "w_na = widgets.ToggleButton(value=False,description='Block Na Channel',icon='ban',button_style='danger',layout=wide)\n",
     "w_k = widgets.ToggleButton(value=False,description='Block K Channel',icon='ban',button_style='warning',layout=wide)\n",
@@ -269,6 +270,15 @@
     "    w_ccl_amp.value = ccl_amp; w_ccl_dur.value = ccl_dur\n",
     "    w_ccl_delay.value = ccl_delay; w_vcl_amp.value = vcl_amp\n",
     "w_reset.on_click(reset_default)\n",
+    "\n",
+    "def interactive_fig(*arg):\n",
+    "    if w_fig.value:\n",
+    "        w_fig.icon = 'window-maximize'; w_fig.description = 'Inline plot'\n",
+    "        %matplotlib notebook\n",
+    "    else:\n",
+    "        w_fig.icon = 'window-restore'; w_fig.description = 'Interactive plot'\n",
+    "        %matplotlib inline\n",
+    "w_fig.observe(interactive_fig,'value')\n",
     "\n",
     "def toggle_na(*args):\n",
     "    if w_na.value:\n",
@@ -298,10 +308,10 @@
     "          'Amplitude (nA):','Duration (ms):','Delay (ms):','Amplitude (mV):']\n",
     "Labels = [Label(L) for L in labels]\n",
     "\n",
-    "ui = VBox([ w_reset, w_tstop, HBox([w_na,w_k]), HBox([Labels[0],w_clamp]), HBox(Labels[1:3],layout=around),\n",
+    "ui = VBox([ HBox([w_reset,w_fig]), w_tstop, HBox([w_na,w_k]), HBox([Labels[0],w_clamp]), HBox(Labels[1:3],layout=around),\n",
     "           HBox([ VBox(Labels[3:6]),VBox([w_ccl_amp,w_ccl_dur,w_ccl_delay]),Labels[6],w_vcl_amp ],layout=around) ])\n",
     "out = interactive_output(activemodel,{'tstop':w_tstop,'block_na':w_na,'block_k':w_k,'clamp':w_clamp,\n",
-    "                'ccl_amp':w_ccl_amp,'ccl_dur':w_ccl_dur,'ccl_delay':w_ccl_delay,'vcl_amp':w_vcl_amp})\n",
+    "                'ccl_amp':w_ccl_amp,'ccl_dur':w_ccl_dur,'ccl_delay':w_ccl_delay,'vcl_amp':w_vcl_amp,'fig':w_fig})\n",
     "\n",
     "display(ui,out)"
    ]
@@ -354,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -379,10 +389,10 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.YouTubeVideo at 0x7fee2d6aa410>"
+       "<IPython.lib.display.YouTubeVideo at 0x26b8582a848>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
