--- a/S3_Burster/S3_Burster.ipynb
+++ b/S3_Burster/S3_Burster.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -96,7 +96,7 @@
        "1.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "xH-yU4VPrd1a"
    },
@@ -201,7 +201,7 @@
     "    plt.ylabel('mM'); plt.legend(['Ca pool'],loc=1)\n",
     "    plt.show()\n",
     "\n",
-    "def activemodel(tstop,soma_gl,gcas,gcat,gkA,gkca,soma_gkdr,taucas,axon_gl,axon_gna,axon_gkdr,amp,dur,delay):\n",
+    "def activemodel(tstop,soma_gl,gcas,gcat,gkA,gkca,soma_gkdr,taucas,axon_gl,axon_gna,axon_gkdr,amp,dur,delay,fig):\n",
     "    soma.glbar_leak = soma_gl\n",
     "    soma.gcasbar_cas = gcas\n",
     "    soma.gcatbar_cat = gcat\n",
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -238,12 +238,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "69c2845184654d00bf5ecb9f16d8587e",
+       "model_id": "052495f5a16246ac93e79f5b9a9c622f",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Button(button_style='primary', description='Reset', icon='history', style=ButtonStyle()), Bound…"
+       "VBox(children=(HBox(children=(Button(button_style='primary', description='Reset', icon='history', style=Button…"
       ]
      },
      "metadata": {},
@@ -252,7 +252,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3b78bd3fc410451e9ee9dfbd72b53837",
+       "model_id": "4819f92157054109b4ef4a260dd05864",
        "version_major": 2,
        "version_minor": 0
       },
@@ -287,6 +287,7 @@
     "delay = 200 # delay in ms\n",
     "\n",
     "w_reset = widgets.Button(description='Reset',icon='history',button_style='primary')\n",
+    "w_fig = widgets.ToggleButton(value=False,description='Interactive plot',icon='window-restore',button_style='success')\n",
     "w_tstop = widgets.BoundedFloatText(value=tstop,min=1,max=5e4,description='Tstop (ms)')\n",
     "w_s_gl = widgets.BoundedFloatText(value=soma_gl,min=0,max=1,step=1e-9)\n",
     "w_gcas = widgets.BoundedFloatText(value=gcas,min=0,max=1,step=1e-7)\n",
@@ -311,13 +312,22 @@
     "    w_amp.value = amp; w_dur.value = dur; w_delay.value = delay\n",
     "w_reset.on_click(reset_default)\n",
     "\n",
+    "def interactive_fig(*arg):\n",
+    "    if w_fig.value:\n",
+    "        w_fig.icon = 'window-maximize'; w_fig.description = 'Inline plot'\n",
+    "        %matplotlib notebook\n",
+    "    else:\n",
+    "        w_fig.icon = 'window-restore'; w_fig.description = 'Interactive plot'\n",
+    "        %matplotlib inline\n",
+    "w_fig.observe(interactive_fig,'value')\n",
+    "\n",
     "between = Layout(justify_content='space-between')\n",
     "around = Layout(justify_content='space-around')\n",
     "labels = ['gL:','gCaS:','gCaT:','gKA:','gKCa:','gKdr:','tauCa (ms):',\n",
     "          'Amplitude (nA):','Duration (ms):','Delay (ms):','gL:','gNa:','gKdr:']\n",
     "Labels = [Label(L) for L in labels]\n",
     "\n",
-    "ui = VBox([ w_reset, w_tstop, HBox([\n",
+    "ui = VBox([ HBox([w_reset,w_fig]), w_tstop, HBox([\n",
     "            VBox([ Label('Soma channels conductance (S/cm²)'),\n",
     "                  HBox([ VBox(Labels[:7]),VBox([w_s_gl,w_gcas,w_gcat,w_gkA,w_gkca,w_s_gkdr,w_taucas]) ], layout=between) ]),\n",
     "            VBox([ Label('Current clamp'),\n",
@@ -326,7 +336,7 @@
     "                  HBox([ VBox(Labels[-3:]),VBox([w_a_gl,w_a_gna,w_a_gkdr]) ], layout=between) ]) ], layout=around) ])\n",
     "out = interactive_output(activemodel,{'tstop':w_tstop,'soma_gl':w_s_gl,'gcas':w_gcas,'gcat':w_gcat,\n",
     "                    'gkA':w_gkA,'gkca':w_gkca,'soma_gkdr':w_s_gkdr,'taucas':w_taucas,'axon_gl':w_a_gl,\n",
-    "                    'axon_gna':w_a_gna,'axon_gkdr':w_a_gkdr,'amp':w_amp,'dur':w_dur,'delay':w_delay})\n",
+    "                    'axon_gna':w_a_gna,'axon_gkdr':w_a_gkdr,'amp':w_amp,'dur':w_dur,'delay':w_delay,'fig':w_fig})\n",
     "\n",
     "display(ui,out)"
    ]
@@ -361,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "id": "kOsqQcJxrd1f"
    },
