--- a/S4_Synapses/S4_Synapses.ipynb
+++ b/S4_Synapses/S4_Synapses.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -95,7 +95,7 @@
        "1.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "id": "zqRabRtRwOjP"
    },
@@ -250,7 +250,7 @@
     "    ax22.set_xlabel('time (ms)')\n",
     "    plt.show()\n",
     "\n",
-    "def activemodel(amp,intvlA,numA,delA,intvlB,numB,delB,WExc1,WInh1,WExc2,WInh2,section):\n",
+    "def activemodel(amp,intvlA,numA,delA,intvlB,numB,delB,WExc1,WInh1,WExc2,WInh2,section,fig):\n",
     "    ccl.amp = amp\n",
     "    sourceA.interval = intvlA; sourceA.number = numA; sourceA.start = delA\n",
     "    sourceB.interval = intvlB; sourceB.number = numB; sourceB.start = delB\n",
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -278,12 +278,12 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "64245473e3f24c5083b9bafcdf47cbb8",
+       "model_id": "9db47dae8cbb4344a07ba36a16e37539",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "VBox(children=(Button(button_style='primary', description='Reset', icon='history', style=ButtonStyle()), HBox(…"
+       "VBox(children=(HBox(children=(Button(button_style='primary', description='Reset', icon='history', style=Button…"
       ]
      },
      "metadata": {},
@@ -292,7 +292,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24715d65c86440f78d3d0817c5ae4a61",
+       "model_id": "75da1077d8fe4dbf8c8dc6856e47d1b8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -319,6 +319,7 @@
     "section = 'Soma'\n",
     "\n",
     "w_reset = widgets.Button(description='Reset',icon='history',button_style='primary')\n",
+    "w_fig = widgets.ToggleButton(value=False,description='Interactive plot',icon='window-restore',button_style='success')\n",
     "w_sec = widgets.ToggleButtons(value=section,options=['Soma','Dend1','Dend2'],button_style='info')\n",
     "w_amp = widgets.FloatText(value=amp,step=0.1)\n",
     "w_intvlA = widgets.BoundedFloatText(value=interval,min=0,max=h.tstop,step=.1)\n",
@@ -341,16 +342,25 @@
     "    w_WExc2.value = WExc2; w_WInh2.value = WInh2\n",
     "w_reset.on_click(reset_default)\n",
     "\n",
+    "def interactive_fig(*arg):\n",
+    "    if w_fig.value:\n",
+    "        w_fig.icon = 'window-maximize'; w_fig.description = 'Inline plot'\n",
+    "        %matplotlib notebook\n",
+    "    else:\n",
+    "        w_fig.icon = 'window-restore'; w_fig.description = 'Interactive plot'\n",
+    "        %matplotlib inline\n",
+    "w_fig.observe(interactive_fig,'value')\n",
+    "\n",
     "labels = ['Current Clamp Amplitude (nA)','','interval (ms)','number','start (ms)','','Dendrite 1','Dendrite 2',\n",
     "          'Source A','Excitatory synaptic weight','Source B','Inhibitory synaptic weight','Choose compartment']\n",
     "Labels = [Label(L) for L in labels]\n",
-    "ui = VBox([ w_reset, HBox([Labels[0],w_amp]), HBox([ VBox(Labels[1:8]),\n",
+    "ui = VBox([ HBox([w_reset,w_fig]), HBox([Labels[0],w_amp]), HBox([ VBox(Labels[1:8]),\n",
     "            VBox([Labels[8],w_intvlA,w_numA,w_delA,Labels[9],w_WExc1,w_WExc2]),\n",
     "            VBox([Labels[10],w_intvlB,w_numB,w_delB,Labels[11],w_WInh1,w_WInh2]) ],\n",
     "            layout=Layout(justify_content='space-around')), HBox([Labels[12],w_sec]) ])\n",
     "out = interactive_output(activemodel,{'amp':w_amp,\n",
     "                                      'intvlA':w_intvlA,'numA':w_numA,'delA':w_delA,'intvlB':w_intvlB,'numB':w_numB,'delB':w_delB,\n",
-    "                                      'WExc1':w_WExc1,'WInh1':w_WInh1,'WExc2':w_WExc2,'WInh2':w_WInh2,'section':w_sec})\n",
+    "                                      'WExc1':w_WExc1,'WInh1':w_WInh1,'WExc2':w_WExc2,'WInh2':w_WInh2,'section':w_sec,'fig':w_fig})\n",
     "\n",
     "display(ui,out)"
    ]
@@ -384,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "id": "F5kmaj4wwOjV"
    },
